--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,4 +9,8 @@ License: GPL-3
 Encoding: UTF-8
 LazyData: true
 Imports: eRm, psych, openxlsx, parallel, stats, utils
+Depends: R (>= 3.5.0)
 RoxygenNote: 7.1.2
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
