added itemfit_control() to handle options for test_itemfit()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(all_rawscores)
 export(apply_pattern_rules)
 export(exhaustive_tests)
+export(itemfit_control)
 export(save_passed_xlsx)
 export(test_LR)
 export(test_itemfit)
