--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,5 +10,6 @@ export(test_LR)
 export(test_itemfit)
 export(test_mloef)
 export(test_pca)
+export(test_personsItems)
 export(test_waldtest)
 export(threshold_order)
