--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: exhaustiveRasch
 Type: Package
-Title: Exhaustive search for Rasch-models
+Title: Exhaustive search for Rasch models
 Version: 0.1.5
-Author: Christian Grebe <christian.grebe@fh-bielefeld.de>
+Author: Christian Grebe <christian.grebe@fh-bielefeld.de>, Mirko Schürmann <mirko.schuermann@upb.de>
 Maintainer: Christian Grebe <christian.grebe@fh-bielefeld.de>
-Description: Exhaustive search for possible Rasch-models (Dichotomous, Partial Credit, Rating-Scale) in a list of item-patterns. The item-patterns to test can be either all possible patterns or item-patterns can be defined by several rules (forced inclusion of specific items, exclusion of sub-patterns, minimum/maximum items of a sub-pattern). Tests for model-and item-fit include ordering of the thresholds, itemfit-indices, likelihood ratio test, Martin Löf test, waldtest, principal component analysis with tetra-/polychoric correlations and rempirical representation of all raw scores. The tests, their ordering and their parameters can be defined. Item- and person-parameters are estimated as conditional likelihood estimation using functions of the eRM-package.
+Description: The item-combinations to test can be either all possible combinations or item-combinations can be defined by several rules (forced inclusion of specific items, exclusion of sub-patterns, minimum/maximum items of a sub-pattern). Tests for model-and item-fit include ordering of the thresholds, itemfit-indices, likelihood ratio test, Martin Löf test, waldtest, principal component analysis with tetra-/polychoric correlations, person-item distribution and empirical representation of all raw scores. The tests, their ordering and their parameters can be defined. Item- and person-parameters are estimated as conditional likelihood estimation using functions of the package eRm and psychotree.
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
