--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,16 @@
 Package: exhaustiveRasch
 Type: Package
 Title: Exhaustive search for Rasch models
-Version: 0.1.5
+Version: 0.1.6
 Author: Christian Grebe <christian.grebe@fh-bielefeld.de>, Mirko Schürmann <mirko.schuermann@upb.de>
 Maintainer: Christian Grebe <christian.grebe@fh-bielefeld.de>
-Description: Automation of the item selection Processes for rasch scales by means of exhaustive search for suitable Rasch models (dichotomous, partial credit, rating-Scale) in a list of item-combinations. The item-combinations to test can be either all possible combinations or item-combinations can be defined by several rules (forced inclusion of specific items, exclusion of sub-patterns, minimum/maximum items of a sub-pattern). Tests for model-and item-fit include ordering of the thresholds, itemfit-indices, likelihood ratio test, Martin Löf test, waldtest, principal component analysis with tetra-/polychoric correlations, person-item distribution and empirical representation of all raw scores. The tests, their ordering and their parameters can be defined. Item- and person-parameters are estimated as conditional likelihood estimation using functions of the package eRm and psychotree.
+Description: Automation of the item selection Processes for rasch scales by means of exhaustive search for suitable Rasch models (dichotomous, partial credit, rating-scale) in a list of item-combinations. The item-combinations to test can be either all possible combinations or item-combinations can be defined by several rules (forced inclusion of specific items, exclusion of combinations, minimum/maximum items of a subset of items). Tests for model-and item-fit include ordering of the thresholds, itemfit-indices, likelihood ratio test, Martin Löf test, waldtest, person-item distribution and empirical representation of all raw scores. The tests, their ordering and their parameters can be defined. Item- and person-parameters are estimated as conditional likelihood estimation using functions of the package eRm and psychotree.
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
-Imports: eRm, psychotree, psych, openxlsx, parallel, stats, utils
+Imports: eRm, psychotree, openxlsx, parallel, stats, utils, tictoc, methods
 Depends: R (>= 3.5.0)
-RoxygenNote: 7.1.2
 Suggests: knitr, rmarkdown, testthat (>= 3.0.0)
 VignetteBuilder: knitr
 Config/testthat/edition: 3
+RoxygenNote: 7.2.1
