--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,12 +4,15 @@ export(all_rawscores)
 export(apply_combo_rules)
 export(exhaustive_tests)
 export(itemfit_control)
+export(no_test)
+export(remove_subsets)
 export(save_passed_xlsx)
 export(test_DIFtree)
 export(test_LR)
 export(test_itemfit)
 export(test_mloef)
-export(test_pca)
 export(test_personsItems)
 export(test_waldtest)
 export(threshold_order)
+exportClasses(passed_exRa)
+exportMethods(summary)
