--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,13 +5,14 @@ export(apply_combo_rules)
 export(exhaustive_tests)
 export(itemfit_control)
 export(no_test)
+export(parallized_tests)
 export(remove_subsets)
-export(save_passed_xlsx)
 export(test_DIFtree)
 export(test_LR)
 export(test_itemfit)
 export(test_mloef)
 export(test_personsItems)
+export(test_respca)
 export(test_waldtest)
 export(threshold_order)
 exportClasses(passed_exRa)
