--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,9 +2,9 @@ Package: exhaustiveRasch
 Type: Package
 Title: Item selection and exhaustive search for Rasch models
 Version: 0.3.2
-Author: Christian Grebe <christian.grebe@hsbi.de>, Mirko Schürmann <mirko.schuermann@upb.de>
-Maintainer: Christian Grebe <christian.grebe@hsbi.de>
-Description: Automation of the item selection Processes for rasch scales by means of exhaustive search for suitable Rasch models (dichotomous, partial credit, rating-scale) in a list of item-combinations. The item-combinations to test can be either all possible combinations or item-combinations can be defined by several rules (forced inclusion of specific items, exclusion of combinations, minimum/maximum items of a subset of items). Tests for model-and item-fit include ordering of the thresholds, itemfit-indices, likelihood ratio test, Martin Löf test, waldtest, person-item distribution and empirical representation of all raw scores. The tests, their ordering and their parameters can be defined. Item- and person-parameters are estimated as conditional likelihood estimation using functions of the package eRm and psychotree.
+Date: 2024-11-24
+Maintainer: Christian Grebe <grebe@hepcos.com>
+Description: Automation of the item selection Processes for rasch scales by means of exhaustive search for suitable Rasch models (dichotomous, partial credit, rating-scale) in a list of item-combinations. The item-combinations to test can be either all possible combinations or item-combinations can be defined by several rules (forced inclusion of specific items, exclusion of combinations, minimum/maximum items of a subset of items). Tests for model-and item-fit include ordering of the thresholds, itemfit-indices, likelihood ratio test, Martin Löf test, waldtest, person-item distribution and empirical representation of all raw scores. The tests, their ordering and their parameters can be defined. For parameter estimation and model tests  functions of the packages eRm, psychotools or pairwise can be used.
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
@@ -17,8 +17,14 @@ RoxygenNote: 7.3.2
 URL: https://github.com/chrgrebe/exhaustiveRasch
 BugReports: https://github.com/chrgrebe/exhaustiveRasch/issues
 Authors@R: c(
-    person("Christian", "Grebe", , "christian.grebe@hsbi.de", role = c("cre", "aut"),
+    person("Christian", "Grebe", , "grebe@hepcos.com", role = c("cre", "aut"),
            comment = c(ORCID = "0000-0002-1944-7422")),
     person("Mirko", "Schürmann", , "mirko.schuermann@upb.de", role = "aut",
-           comment = c(ORCID = "0000-0003-2646-085X"))
+           comment = c(ORCID = "0000-0003-2646-085X")),
+    person(given="Joerg-Henrik", family="Heine", email="jhheine@googlemail.com", role="ctb"),
+    person(given="Patrick", family="Mair", email="mair@fas.harvard.edu", role="ctb"),
+    person(given="Thomas", family="Rusch", email="thomas.rusch@wu.ac.at", role="ctb"),
+    person(given="Reinhold", family="Hatzinger", role="ctb"),
+    person(given=c("Marco", "J."), family="Maier", role="ctb"),
+    person(given="Rudolf", family="Debelak", email="rudolf.debelak@psychologie.uzh.ch", role="ctb")
   )
